--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,13 @@
     "name": "@throw-out-error/next-homelab-backend",
     "version": "0.0.1",
     "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.8",
+        "@types/express-jwt": "^0.0.42",
+        "@types/express-session": "^1.17.0",
+        "@types/helmet": "^0.0.48",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "^14.10.1",
         "@typescript-eslint/eslint-plugin": "^4.1.0",
         "@typescript-eslint/parser": "^4.1.0",
@@ -16,8 +22,16 @@
     },
     "dependencies": {
         "apollo-server-express": "^2.17.0",
+        "bcrypt": "^5.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "express-session": "^1.17.1",
         "graphql": "^15.3.0",
+        "helmet": "^4.1.1",
+        "jsonwebtoken": "^8.5.1",
+        "pg": "^8.3.3",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^5.0.0",
         "type-graphql": "^1.0.0",
