--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "apollo-server-express": "^2.17.0",
         "bcrypt": "^5.0.0",
+        "class-validator": "^0.12.2",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
@@ -38,6 +39,6 @@
         "typeorm": "0.2.26"
     },
     "scripts": {
-        "start": "nodemon"
+        "dev": "nodemon"
     }
 }
