--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,12 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "lib": [
-            "dom",
-            "es6",
-            "es2019",
-            "esnext.asynciterable"
-        ],
+        "lib": ["dom", "es6", "es2019", "esnext.asynciterable"],
         "sourceMap": true,
         "moduleResolution": "node",
         "removeComments": true,
@@ -16,15 +11,15 @@
         "noImplicitThis": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+        "skipLibCheck": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "resolveJsonModule": true
-    },
-    "exclude": [
-        "**/node_modules"
-    ]
+        "resolveJsonModule": true,
+        "target": "es6",
+        "baseUrl": "."
+    }
 }
