--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
     "description": "",
     "main": "index.js",
     "private": true,
-    "workspaces": [
-        "packages/*"
-    ],
     "scripts": {
         "start": "ultra -r dev"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "dependencies": {
+    "license": "MIT",
+    "devDependencies": {
+        "lerna": "^3.22.1",
         "ultra-runner": "^3.5.0"
     }
 }
