--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
         "@types/bcryptjs": "^2.4.2",
+        "@types/cookie-parser": "^1.4.2",
         "@types/express": "^4.17.8",
         "@types/express-jwt": "^0.0.42",
         "@types/express-session": "^1.17.0",
@@ -24,6 +25,7 @@
         "apollo-server-express": "^2.17.0",
         "bcrypt": "^5.0.0",
         "class-validator": "^0.12.2",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
