--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM mhart/alpine-node:latest
+FROM creepinson/alpine-pnpm:latest
 
 # If possible, run your container using `docker run --init`
 # Otherwise, you can use `tini`:
@@ -11,4 +11,6 @@ COPY . .
 # If you have native dependencies, you'll need extra tools
 # RUN apk add --no-cache make gcc g++ python
 
-CMD ["npm", "run", "dev"]
+RUN pnpm i
+
+CMD ["pnpm", "run", "dev"]
