--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,14 @@
 {
-	"extends": [
-		"prettier",
-		"plugin:@typescript-eslint/recommended",
-		"prettier/@typescript-eslint"
-	],
-	"parser": "@typescript-eslint/parser",
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
-	}
+    "extends": ["prettier", "plugin:@typescript-eslint/recommended"],
+    "parser": "@typescript-eslint/parser",
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
+    "plugins": ["prettier"],
+    "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "prettier/prettier": "error"
+    }
 }
