--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "tabWidth": 4,
     "printWidth": 80,
     "trailingComma": "all",
-    "semi": true
+    "semi": true,
+    "singleQuote": false
 }
