--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,29 @@
-ersion: "3"
-services:
-    backend:
-        build:
-            context: ./packages/backend
-        depends_on:
-            - db
-        env_file: ./packages/backend/.env
-        ports:
-            - "8080:8080"
-        volumes:
-            - ./packages/backend:/app
-    frontend:
-        build:
-            context: ./packages/frontend
-        command: yarn dev
-        depends_on:
-            - backend
-        volumes:
-            - ./packages/frontend:/app
-        ports:
-            - "3000:3000"
-    db:
-        image: postgres:alpine
-        volumes:
-            - db_data:/var/lib/postgresql/data
+version: "3"
+
 volumes:
-    db_data:
+  pgadmin-data:
+  pg-data:
+
+services:
+  db:
+    image: postgres:alpine
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=1234
+      - POSTGRES_DB=homelab
+    volumes:
+      - pg-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - "9201:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: root@localhost.localdomain
+      PGADMIN_DEFAULT_PASSWORD: secret
+      PGADMIN_DISABLE_POSTFIX: "true"
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
