--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,46 +1,45 @@
 {
-    "name": "@throw-out-error/next-homelab-backend",
+    "name": "@throw-out-error/homelab-backend",
     "version": "0.0.1",
     "devDependencies": {
-        "@types/bcrypt": "^3.0.0",
-        "@types/bcryptjs": "^2.4.2",
+        "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.2",
-        "@types/express": "^4.17.8",
-        "@types/express-jwt": "^0.0.42",
-        "@types/express-session": "^1.17.0",
-        "@types/helmet": "^0.0.48",
-        "@types/jsonwebtoken": "^8.5.0",
-        "@types/node": "^14.10.1",
-        "@typescript-eslint/eslint-plugin": "^4.1.0",
-        "@typescript-eslint/parser": "^4.1.0",
-        "eslint": "^7.9.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "nodemon": "^2.0.4",
-        "prettier": "^2.1.1",
-        "ts-node": "9.0.0",
-        "typescript": "^4.0.2"
+        "@types/express": "^4.17.13",
+        "@types/express-jwt": "^6.0.2",
+        "@types/express-session": "^1.17.4",
+        "@types/jsonwebtoken": "^8.5.5",
+        "@types/node": "^16.9.1",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.12",
+        "prettier": "^2.4.0",
+        "ts-node": "10.2.1",
+        "typescript": "^4.4.2"
     },
     "dependencies": {
-        "apollo-server-express": "^2.17.0",
-        "bcrypt": "^5.0.0",
-        "class-validator": "^0.12.2",
+        "apollo-server-express": "^3.3.0",
+        "bcrypt": "^5.0.1",
+        "class-validator": "^0.13.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
-        "dotenv": "^8.2.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "express-jwt": "^6.0.0",
-        "express-session": "^1.17.1",
-        "graphql": "^15.3.0",
-        "helmet": "^4.1.1",
+        "express-jwt": "^6.1.0",
+        "express-session": "^1.17.2",
+        "graphql": "^15.5.3",
+        "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
-        "pg": "^8.3.3",
+        "pg": "^8.7.1",
         "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.0.0",
-        "type-graphql": "^1.0.0",
-        "typeorm": "0.2.26"
+        "sqlite3": "^5.0.2",
+        "type-graphql": "^1.1.1",
+        "typeorm": "0.2.37"
     },
     "scripts": {
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "lint": "eslint --fix src/**/*.ts"
     }
 }
