--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -6,11 +6,7 @@
         "moduleResolution": "node",
         "removeComments": true,
         "noImplicitAny": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "noImplicitThis": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "strict": true,
         "skipLibCheck": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
