--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,46 +1,47 @@
 {
-    "name": "@throw-out-error/next-homelab-frontend",
+    "name": "@throw-out-error/homelab-frontend",
     "version": "0.0.1",
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint src/**/*.ts --quiet --fix"
+        "dev": "vite",
+        "build": "vite build",
+        "lint": "eslint src/**/*.ts --fix",
+        "gen": "graphql-codegen --config codegen.yml"
     },
     "dependencies": {
-        "@apollo/react-hooks": "^4.0.0",
-        "apollo-boost": "^0.4.9",
-        "apollo-link-ws": "^1.0.20",
-        "apollo-server-micro": "^2.17.0",
-        "axios": "^0.20.0",
-        "bootstrap": "^4.5.2",
-        "cheerio": "^1.0.0-rc.3",
-        "graphql": "^15.3.0",
-        "graphql-tag": "^2.11.0",
-        "knex": "^0.21.5",
-        "mysql": "^2.18.1",
-        "next": "9.5.3",
-        "next-apollo": "^5.0.0",
-        "next-auth": "^3.1.0",
-        "react": "16.13.1",
-        "react-apollo": "^3.1.5",
-        "react-bootstrap": "^1.3.0",
-        "react-dom": "16.13.1",
-        "react-hook-form": "^6.8.2",
-        "rsync": "^0.6.1",
-        "subscriptions-transport-ws": "^0.9.18"
+        "@apollo/client": "^3.4.10",
+        "@chakra-ui/icons": "^1.0.15",
+        "@chakra-ui/react": "^1.6.7",
+        "@emotion/react": "^11",
+        "@emotion/styled": "^11",
+        "axios": "^0.21.4",
+        "cheerio": "^1.0.0-rc.10",
+        "formik": "^2.2.9",
+        "framer-motion": "^4",
+        "graphql": "^15.5.3",
+        "graphql-tag": "^2.12.5",
+        "prop-types-extra": "^1.1.1",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-helmet-async": "^1.1.2",
+        "subscriptions-transport-ws": "^0.9.19",
+        "wouter": "^2.7.4"
     },
     "devDependencies": {
-        "@types/cheerio": "^0.22.21",
-        "@types/react": "^16.9.49",
-        "@types/react-bootstrap": "^0.32.23",
-        "@types/react-dom": "^16.9.8",
-        "@typescript-eslint/eslint-plugin": "^4.1.0",
-        "@typescript-eslint/parser": "^4.1.0",
-        "eslint": "^7.9.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "prettier": "^2.1.1",
-        "typescript": "^4.0.2"
+        "@graphql-codegen/cli": "2.2.0",
+        "@types/cheerio": "^0.22.30",
+        "@types/react": "^17.0.20",
+        "@types/react-dom": "^17.0.9",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "@vitejs/plugin-react-refresh": "^1.3.6",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "prettier": "^2.4.0",
+        "typescript": "^4.4.2",
+        "vite": "^2.5.6",
+        "@graphql-codegen/typescript-react-apollo": "3.1.3",
+        "@graphql-codegen/typescript": "2.2.1",
+        "@graphql-codegen/typescript-operations": "2.1.3"
     }
 }
